# PaySystem

./: .env.example  .gitignore  .pre-commit-config.yaml  DEV.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_test_data.py
app/: config.py  database.py  exceptions.py  main.py
app/api/v1/: admin.py  auth.py  users.py  webhook.py
app/core/: dependencies.py  error_messages.py  security.py
app/models/: __init__.py  account.py  payment.py  user.py
app/repositories/: __init__.py  account_repository.py  base_repository.py  payment_repository.py  repository.py  user_repository.py
app/schemas/: __init__.py  account.py  auth.py  payment.py  user.py
app/services/: __init__.py  admin_service.py  base_service.py  payment_service.py  service.py  user_service.py
